# jerry

./: CONTEXT.md  README.md  main.py  pyproject.toml
devx/integrations/azureai/: client.py
devx/integrations/jira/: client.py
docs/: FEATURES.md
jerry/: __init__.py
jerry/api/: app.py
jerry/core/: config.py
jerry/integrations/azureai/: client.py
jerry/integrations/github/: client.py
jerry/integrations/jira/: client.py
jerry/integrations/slack/: client.py
jerry/prompts/: jira_planning.md  pr_review.md  slack_responses.md
tests/: conftest.py
tests/integrations/: test_azureai.py  test_github.py  test_jira.py  test_slack.py
