[project]
name = "jerry"
version = "0.1.0"
description = "AI Agent for Developer Experience"
dependencies = [
    "fastapi",
    "uvicorn",
    "jira",
    "PyGithub",
    "slack-bolt",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "openai",
    "azure-ai-textanalytics",
    "azure-core",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
